--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
     "framer-motion": "^4",
     "nanoid": "^3.1.30",
     "next": "12.0.7",
